--- a/luscii_patient_actions_sdk/example/android/app/build.gradle
+++ b/luscii_patient_actions_sdk/example/android/app/build.gradle
@@ -61,6 +61,12 @@ android {
         dataBinding = true
     }
 
+    packaging {
+        resources {
+            excludes += ['META-INF/versions/9/OSGI-INF/MANIFEST.MF']
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
@@ -75,8 +81,8 @@ android {
 }
 
 dependencies {
-    implementation "com.google.dagger:hilt-android:2.57.1"
-    kapt "com.google.dagger:hilt-compiler:2.57.1"
+    implementation "com.google.dagger:hilt-android:2.57.2"
+    kapt "com.google.dagger:hilt-compiler:2.57.2"
     implementation 'androidx.window:window:1.3.0'
     implementation 'androidx.window:window-java:1.3.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
