--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -96,7 +96,7 @@ jobs:
           api-level: 34
           arch: x86_64
           target: google_apis
-          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+          script: cd luscii_patient_actions_sdk/example && patrol test patrol_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
 
       - name: Upload Android Test Reports
         uses: actions/upload-artifact@v4
@@ -148,7 +148,7 @@ jobs:
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${{ steps.simulator.outputs.udid }}"
+        run: patrol test patrol_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${{ steps.simulator.outputs.udid }}"
 
       - name: Upload iOS Test Reports
         uses: actions/upload-artifact@v4
