--- a/luscii_patient_actions_sdk/example/ios/Podfile
+++ b/luscii_patient_actions_sdk/example/ios/Podfile
@@ -32,13 +32,10 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-end
-
-target 'RunnerUITests' do
-  use_frameworks!
-  use_modular_headers!
-
-  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  
+  target 'RunnerUITests' do
+      inherit! :complete
+    end
 end
 
 post_install do |installer|
