--- a/luscii_patient_actions_sdk_android/android/build.gradle
+++ b/luscii_patient_actions_sdk_android/android/build.gradle
@@ -45,7 +45,8 @@ android {
     }
 
     dependencies {
-        implementation("com.luscii:sdk:0.8.2")
+        def lusciiSdkArtifact = project.findProperty('lusciiSdkArtifact') ?: "com.luscii:sdk:0.8.2"
+        implementation(lusciiSdkArtifact)
         implementation "com.google.dagger:hilt-android:2.57.2"
         implementation "androidx.fragment:fragment-ktx:1.8.6"
         kapt "com.google.dagger:hilt-compiler:2.57.2"
