--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -148,7 +148,7 @@ jobs:
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test patrol_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${{ steps.simulator.outputs.udid }}" --verbose
+        run: patrol test patrol_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${{ steps.simulator.outputs.udid }}"
 
       - name: Upload iOS Test Reports
         uses: actions/upload-artifact@v4
