--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,7 +82,7 @@ stages:
       - task: Cache@2
         displayName: "Cache pub cache"
         inputs:
-          key: 'pub | "$(Agent.OS)" | $(PKG_DIR)/pubspec.lock'
+          key: 'pub | "$(Agent.OS)" | $(EXAMPLE_DIR)/pubspec.lock'
           restoreKeys: |
             pub | "$(Agent.OS)"
           path: "$(Pipeline.Workspace)/.pub-cache"
